# mac-drop

./: .gitignore  README.md  pyproject.toml  run.py
resources/: README.md
scripts/: fetch_adb.py
src/mac_drop/: adb_service.py  file_explorer.py  main.py  main_window.py  models.py  workers.py
