[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-drop"
version = "0.1.0"
description = "Finder-like file transfer UI between macOS and Android over ADB"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "mac-drop contributors" }]
dependencies = [
  "PySide6>=6.7",
]

[project.scripts]
mac-drop = "mac_drop.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
